# Calendar

./: .gitignore  CMakeLists.txt  build_run_script.sh
src/: calendarEvent.cpp  calendarEvent.h  calendarTask.cpp  calendarTask.h  dbManager.cpp  dbManager.h  mainwindow.cpp  mainwindow.h
